--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Kevin Cioch" />
+    <meta name="keywords" content="React, Weather Dashboard, Frontend" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Weather Dashboard"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Weather Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
