changed meta / manifest information and icons

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#37404c" />
     <meta name="author" content="Kevin Cioch" />
-    <meta name="keywords" content="React, Weather Dashboard, Frontend" />
+    <meta name="keywords" content="React, Weather Dashboard, Frontend, Forecast" />
     <meta
       name="description"
-      content="Weather Dashboard"
+      content="A simple weather dashboard to display the current weather information and show a preview of the next days"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
