--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="author" href="https://www.kevincioch.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#37404c" />
     <meta name="author" content="Kevin Cioch" />
